# nginx-conf

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
nginx_conf/: __init__.py  core.py
tests/: test_nginx_conf.py
